<resources>
    <string name="app_name">shemajamebeliN7</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="dashboard">Dashboard</string>
    <string name="mail">Mail</string>
    <string name="notifications">Notifications</string>
    <string name="fyneen">Fyneen</string>
    <string name="personal">personal</string>
    <string name="business">Business</string>
    <string name="notification">Notification</string>
    <string name="activity">Activity</string>
    <string name="ganti_mode_gelap">Ganti Mode Gelap</string>
    <string name="amanda_rachel">Amanda Rachel</string>
    <string name="amandaer_mail_com">amandaer@mail.com</string>
</resources>